[gd_scene load_steps=7 format=3 uid="uid://cvseyj1185fgj"]

[ext_resource type="Script" uid="uid://c12x7gc5fmaj8" path="res://Game.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://b8u24lq4eo0ky" path="res://assets/heart32.png" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://bbju5s5trvicd" path="res://assets/0.png" id="2_lquwl"]
[ext_resource type="Texture2D" uid="uid://bi4wwfgcl326s" path="res://assets/1.png" id="3_7mycd"]
[ext_resource type="Texture2D" uid="uid://b78syonvfwue4" path="res://assets/2.png" id="4_272bh"]

[sub_resource type="Theme" id="Theme_ig7tw"]

[node name="Main" type="Node2D"]
metadata/_edit_horizontal_guides_ = [341.0]
metadata/_edit_vertical_guides_ = [550.0]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ig7tw")
reaction_texture = Array[Texture2D]([ExtResource("2_lquwl"), ExtResource("3_7mycd"), ExtResource("4_272bh")])
heart_texture = ExtResource("2_0xm2m")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 309.0
offset_top = 170.0
offset_right = 786.0
offset_bottom = 511.0
alignment = 1

[node name="ScoreLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Score:"

[node name="LettersContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="WordInput" type="LineEdit" parent="Control/VBoxContainer"]
layout_mode = 2
placeholder_text = "Start typing here..."
emoji_menu_enabled = false

[node name="SubmitButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="FeedbackLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
visibility_layer = 3
layout_mode = 0
offset_left = 796.0
offset_top = 315.0
offset_right = 979.0
offset_bottom = 372.0
theme = SubResource("Theme_ig7tw")

[node name="ReactionImage" type="TextureRect" parent="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 174.0
offset_top = 269.0
offset_right = 294.0
offset_bottom = 389.0

[connection signal="pressed" from="Control/VBoxContainer/SubmitButton" to="Control" method="on_word_submitted"]
